--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -166,7 +166,7 @@
 		</form>
 	</div>
 	<hr>
-	<a href="/api/friends">API Friends List</a> | <a href="https://github.com/MonicaSzabo/FriendFinder" target="_blank">GitHub Repo</a>
+	<a href="/api/friends">API Friends</a> | <a href="https://github.com/franciscaechague/friendFinder" target="_blank">GitHub Repo</a>
 </div>
 <div id="bestFriendModal" class="modal fade" role="dialog">
 	<div class="modal-dialog">
